--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/screenBackground"
+    >
 
 
 
@@ -17,7 +19,7 @@
         >
 
 
-        <com.app.l_pesa.common.CommonTextRegular
+       <!-- <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txt_loan_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -128,19 +130,101 @@
 
 
         </LinearLayout>
+-->
+
+        <LinearLayout
+            android:id="@+id/ll_loan_type"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent=".48"
+            app:layout_constraintBottom_toTopOf="@+id/buttonCalculateLoan"
+
+            >
+
+
+            <com.app.l_pesa.common.CommonInputLayout
+                style="@style/customInputLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/textColors"
+                app:hintTextAppearance="@style/TextLabel"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ti_loan_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/choose_loan_type"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:cursorVisible="false"
+                    android:textColor="@color/textColors"
+                    android:textColorHint="@color/textColors"
+                    android:textSize="@dimen/_11sdp"
+                    android:drawableEnd="@drawable/ic_down_arrow"
+                    />
+            </com.app.l_pesa.common.CommonInputLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_product_name"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ll_loan_type"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent=".48"
+
+
+            >
+
+
+            <com.app.l_pesa.common.CommonInputLayout
+                style="@style/customInputLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/textColors"
+                app:hintTextAppearance="@style/TextLabel"
+
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ti_product_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:cursorVisible="false"
+                    android:hint="@string/choose_option"
+                    android:textColor="@color/textColors"
+                    android:textColorHint="@color/textColors"
+                    android:textSize="@dimen/_11sdp"
+                    android:drawableEnd="@drawable/ic_down_arrow"
+                    />
+            </com.app.l_pesa.common.CommonInputLayout>
+
+
+        </LinearLayout>
 
 
         <Button
             android:id="@+id/buttonCalculateLoan"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_width="@dimen/_165sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginTop="@dimen/_25sdp"
             android:background="@drawable/btn_round"
             android:fontFamily="@font/montserrat"
             android:text="@string/calculate_your_loan"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
+            android:textSize="@dimen/_12sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll_loan_type"
@@ -155,10 +239,280 @@
             android:layout_marginTop="@dimen/_15sdp"
             android:background="@color/divider_color"
             app:layout_constraintTop_toBottomOf="@+id/buttonCalculateLoan"
+            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
 
             />
+
+
+
+        <TableLayout
+            android:id="@+id/tableLayout"
+            app:layout_constraintTop_toBottomOf="@+id/view_divider"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+
+               >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/one_usd_equal"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+
+
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/loan_amount_calculator"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/total_payback_calculator"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+
+
+            <TableRow
+                android:id="@+id/tableRow4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/first_weekly_subscription"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+
+
+            <TableRow
+                android:id="@+id/tableRow5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/mid_weekly_subscription"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/last_weekly_subscription"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="1"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+        </TableLayout>
 
 
 
