--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,6 +59,8 @@
 
     <style name="TextLabel" parent="TextAppearance.Design.Hint">
         <item name="android:textSize">@dimen/_11sdp</item>
+        <item name="android:textColor">@color/textColors</item>
+        <item name="android:textColorHint">@color/textColors</item>
     </style>
 
 
