--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -52,7 +52,7 @@
             />
 
         <io.fotoapparat.view.CameraView
-            android:id="@+id/camera_view"
+            android:id="@+id/cameraView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/txtInfo"
@@ -63,7 +63,7 @@
         <LinearLayout
             android:id="@+id/layoutBottom"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_75sdp"
+            android:layout_height="@dimen/_65sdp"
             android:background="@android:color/white"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,16 +72,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
-        <ImageView
-            android:id="@+id/imageSave"
-            android:layout_width="@dimen/_65sdp"
-            android:layout_height="@dimen/_65sdp"
-            android:contentDescription="@string/app_name"
-            android:layout_gravity="center"
-            android:padding="@dimen/_10sdp"
-            app:srcCompat="@drawable/ic_app_logo"
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/buttonContinue"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:fontFamily="@font/montserrat"
+                android:background="@drawable/bg_button_app"
+                android:text="@string/continue_"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:letterSpacing=".10"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorWhite"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_gravity="center"
 
-            />
+                />
 
         </LinearLayout>
 
